Fix trade input alignments

--- a/src/trade/tradeDialog.scss
+++ b/src/trade/tradeDialog.scss
@@ -251,7 +251,6 @@
 }
 
 .trade-fields ul li:nth-child(1) > span {
-  min-width: 130px;
   line-height: 28px;
   display: inline-block;
   white-space: nowrap;
@@ -304,11 +303,11 @@
 
 .trade-fields ul li:nth-child(2n) input:not([step]),
 .trade-fields ul li:nth-child(2n+3) input:not([step]) {
-  width: 95px;
+  width: 100px;
 }
 
 .trade-fields ul li select.date-start-select + .chosen-container {
-  width: 160px !important;
+  width: 167px !important;
   .chosen-search { display: none; }
   ul.chosen-results {
     flex-direction: column;
@@ -337,6 +336,8 @@
     background-image: none;
     border-radius: 2px;
     font-weight: normal;
+    height: 100%;
+    padding: 1px 2px;
     text-align: center;
     position: relative;
     box-shadow: none;
@@ -452,5 +453,8 @@
   p {
     margin: 0;
     padding-left: 5px;
+  }
+  input {
+    padding-left: 8px;
   }
 }
